add vue dapp to project

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "ethers": "^5.5.4",
     "vue": "^3.0.0",
+    "vue-dapp": "^0.4.7",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
