--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue-3": "^0.1.6",
     "core-js": "^3.6.5",
     "ethers": "^5.5.4",
     "vue": "^3.0.0",
