--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "bootstrap-vue-3": "^0.1.6",
     "core-js": "^3.6.5",
     "ethers": "^5.5.4",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "sweetalert2": "^11.4.0",
     "vue": "^3.0.0",
     "vue-dapp": "^0.4.7",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
