--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "ethers": "^5.5.4",
     "jquery": "^3.6.0",
+    "moralis": "^1.3.2",
     "popper.js": "^1.16.1",
     "sweetalert2": "^11.4.0",
     "vue": "^3.0.0",
