--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@web3auth/web3auth": "^0.3.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.6",
     "core-js": "^3.6.5",
     "ethers": "^5.5.4",
     "jquery": "^3.6.0",
+    "magic-sdk": "^8.0.1",
     "moralis": "^1.3.2",
     "popper.js": "^1.16.1",
     "sweetalert2": "^11.4.0",
