--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@web3auth/web3auth": "^0.3.0",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.6",
     "core-js": "^3.6.5",
